--- a/owncloudApp/src/main/res/values-ru/strings.xml
+++ b/owncloudApp/src/main/res/values-ru/strings.xml
@@ -79,6 +79,7 @@
   <string name="recommend_subject">Попробуйте %1$s на вашем смартфоне!</string>
   <string name="recommend_text">Хочу предложить вам использовать %1$s на смартфоне!\nЗагрузить можно здесь: %2$s
 	</string>
+  <string name="error_reason">поскольку</string>
   <string name="auth_failure_snackbar">Аутентификация не удалась</string>
   <string name="auth_failure_snackbar_action">Измените учётную запись</string>
   <string name="auth_oauth_failure">Токен доступа устарел или стал недопустимым. Перевойдите, чтобы восстановить доступ</string>
@@ -139,6 +140,7 @@
   <string name="common_error">Ошибка</string>
   <string name="common_loading">Загрузка...</string>
   <string name="common_unknown">неизвестно</string>
+  <string name="common_error_unknown">неизвестная ошибка</string>
   <string name="common_pending">Ожидается</string>
   <string name="common_important">Важный</string>
   <string name="about_title">О программе</string>
@@ -288,6 +290,8 @@
   <string name="confirmation_remove_local">Только локально</string>
   <string name="confirmation_remove_account_alert">Вы действительно хотите удалить аккаунт %1$s?</string>
   <string name="confirmation_remove_public_share_title">Удалить ссылку</string>
+  <string name="confirmation_remove_private_share_title">Удалить общий доступ</string>
+  <string name="confirmation_remove_share_message">Вы действительно хотите удалить общий доступ %1$s?</string>
   <string name="remove_success_msg">Удаление завершено</string>
   <string name="remove_fail_msg">Ошибка удаления</string>
   <string name="rename_dialog_title">Введите новое имя</string>
@@ -358,8 +362,14 @@
   <string name="preview_image_error_unknown_format">Это изображение не может быть отображено</string>
   <string name="error__upload__local_file_not_copied">%1$s невозможно скопировать в локальный каталог %2$s </string>
   <string name="prefs_camera_picture_upload_path_title">Путь загрузки изображений</string>
+  <string name="get_shares_error">Не удалось запросить с сервера список ресурсов общего доступа</string>
+  <string name="get_sharees_error">Не удалось запросить с сервера список пользователей и групп</string>
+  <string name="get_capabilities_error">Не удалось запросить с сервера список возможностей</string>
   <string name="share_link_no_support_share_api">Механизм общего доступа не включен на данном сервере. Пожалуйста, свяжитесь с вашим
 ⇥⇥администратором.</string>
+  <string name="share_link_file_error">Не удалось предоставить доступ к этому файлу или каталогу</string>
+  <string name="unshare_link_file_error">Не удалось убрать общий доступ с этого файла или каталога</string>
+  <string name="update_link_file_error">Не удалось обновить этот файл или каталог</string>
   <string name="share_link_password_title">Введите пароль</string>
   <string name="share_link_empty_password">Вы должны ввести пароль</string>
   <string name="activity_chooser_send_file_title">Отправить</string>
@@ -369,6 +379,7 @@
   <string name="clipboard_uxexpected_error">Неожиданная ошибка во время копирования в буфер обмена</string>
   <string name="clipboard_label">Текст скопирован из %1$s</string>
   <string name="error_cant_bind_to_operations_service">Критическая ошибка: невозможно выполнить действия</string>
+  <string name="network_error_socket_exception">Ошибка при подключении к сверверу</string>
   <string name="network_error_socket_timeout_exception">Сервер слишком долго не отвечает</string>
   <string name="network_error_connect_timeout_exception">Слишком много времени ушло на подключение к серверу</string>
   <string name="network_host_not_available">Сервер не доступен по сети</string>
@@ -549,5 +560,10 @@
   <string name="welcome_feature_9_text">Открывайте и правьте ваши файлы ownCloud из других приложений</string>
   <string name="welcome_feature_10_title">Журналы с поиском для всех</string>
   <string name="welcome_feature_10_text">Отправьте нам ваши журналы и сделайте приложение ещё лучше</string>
+  <string name="welcome_feature_11_title">Поддержка серверов ниже 10 завершается</string>
+  <string name="welcome_feature_11_text">Пожалуйста, обновите ваш сервер, иначе последующие версии приложения не смогут работать для вас</string>
+  <string name="welcome_feature_12_title">Поддержка устройств под Андроидом 4.4 завершается</string>
+  <string name="welcome_feature_12_text">Последующие версии приложения не появятся в Google Play для устройств под Андроидом ниже 5</string>
   <string name="no_borwser_installed_alert">Не установлен никакой браузер. Пожалуйста, установите браузер для поддержки безопасного входа.</string>
+  <string name="common_not_found">не найдено</string>
 </resources>
