--- a/owncloudApp/src/main/res/values-sq/strings.xml
+++ b/owncloudApp/src/main/res/values-sq/strings.xml
@@ -78,6 +78,7 @@
   <string name="illegal_argument_exception_message">Lypset një VEPRIM i vlefshëm te Synimi që u dha</string>
   <string name="recommend_subject">Provojeni %1$s te telefoni juaj!</string>
   <string name="recommend_text">Dua t\’ju ftoj të përdorni %1$s në telefonin tuaj!\nShkarkojeni prej këtu: %2$s</string>
+  <string name="error_reason">ngaqë</string>
   <string name="auth_failure_snackbar">Mirëfilltësimi dështoi</string>
   <string name="auth_failure_snackbar_action">Ndryshoni llogari</string>
   <string name="auth_oauth_failure">Token-i i hyrjeve ka skaduar ose është bërë i pavlefshëm. Ribëni hyrjen në llogari që të rifitoni mundësinë e përdorimit</string>
@@ -138,6 +139,7 @@
   <string name="common_error">Gabim</string>
   <string name="common_loading">Po ngarkohet…</string>
   <string name="common_unknown">i panjohur</string>
+  <string name="common_error_unknown">gabim i panjohur</string>
   <string name="common_pending">Në pritje</string>
   <string name="common_important">E rëndësishme</string>
   <string name="about_title">Rreth</string>
@@ -286,6 +288,8 @@
   <string name="confirmation_remove_local">Vetëm vendorja</string>
   <string name="confirmation_remove_account_alert">Doni vërtet të hiqet llogaria %1$s?</string>
   <string name="confirmation_remove_public_share_title">Hiqe lidhjen</string>
+  <string name="confirmation_remove_private_share_title">Hiqe ndarjen private</string>
+  <string name="confirmation_remove_share_message">Doni vërtet të hiqet ndarja %1$s?</string>
   <string name="remove_success_msg">Heqja doli me sukses</string>
   <string name="remove_fail_msg">Heqja dështoi</string>
   <string name="rename_dialog_title">Jepni një emër të ri</string>
@@ -356,7 +360,13 @@
   <string name="preview_image_error_unknown_format">Kjo figurë nuk mund të shfaqet</string>
   <string name="error__upload__local_file_not_copied">%1$s s\’u kopjua dot te dosja vendore %2$s</string>
   <string name="prefs_camera_picture_upload_path_title">Shteg ngarkimesh fotosh</string>
+  <string name="get_shares_error">S’qe e mundur të merreshin ndarje nga shërbyesi</string>
+  <string name="get_sharees_error">S’qe e mundur të merreshin përdorues dhe grupe nga shërbyesi</string>
+  <string name="get_capabilities_error">S’qe e mundur të merreshin aftësi nga shërbyesi</string>
   <string name="share_link_no_support_share_api">Na ndjeni, ndarja me të tjerët s\’është e aktivizuar te shërbyesi juaj. Ju lutemi, lidhuni me përgjegjësin tuaj.</string>
+  <string name="share_link_file_error">S’qe e mundur të ndahej me të tjerë kjo kartelë ose dosje</string>
+  <string name="unshare_link_file_error">S’qe e mundur të hiqej ndarja e kësaj kartele apo dosjeje</string>
+  <string name="update_link_file_error">S’qe e mundur të përditësohej kjo kartel ose dosje</string>
   <string name="share_link_password_title">Jepni një fjalëkalim</string>
   <string name="share_link_empty_password">Duhet të jepni një fjalëkalim</string>
   <string name="activity_chooser_send_file_title">Dërgoje</string>
@@ -366,6 +376,7 @@
   <string name="clipboard_uxexpected_error">Gabim i panjohur teksa kopjohej në të papastër</string>
   <string name="clipboard_label">Tekst i kopjuar prej %1$s</string>
   <string name="error_cant_bind_to_operations_service">Gabim kritik: nuk mund të kryhen veprime</string>
+  <string name="network_error_socket_exception">një gabim gjatë lidhjes me shërbyesin</string>
   <string name="network_error_socket_timeout_exception">Shërbyesit iu desh shumë kohë për përgjigje</string>
   <string name="network_error_connect_timeout_exception">Shërbyesit iu desh shumë kohë për t\’u lidhur</string>
   <string name="network_host_not_available">S\’u kap dot shërbyesi</string>
@@ -545,5 +556,10 @@
   <string name="welcome_feature_9_text">Hyni në to dhe përpunoni kartela tuajat ownCloud që nga aplikacione të tjera</string>
   <string name="welcome_feature_10_title">Regjistra me mundësi kërkimi për këdo</string>
   <string name="welcome_feature_10_text">Dërgonani regjistrat tuaj për ta bërë aplikacionin të punojë më mirë</string>
+  <string name="welcome_feature_11_title">Mbarim mbulimi për shërbyes më poshtë se 10</string>
+  <string name="welcome_feature_11_text">Ju lutemi, përditësoni shërbyesin tuaj ose versionet e ardhshme të aplikacionit s’do të funksionojnë për ju</string>
+  <string name="welcome_feature_12_title">Mbarim mbulimi për pajisje Android 4.4</string>
+  <string name="welcome_feature_12_text">Versionet e ardhshëm të aplikacionit s’do të shfaqen në Google Play për pajisje poshtë Android 5-s</string>
   <string name="no_borwser_installed_alert">S\’ka shfletues të instaluar. Ju lutemi, instaloni një Shfletues, që të mund të lejohet hyrje e sigurt.</string>
+  <string name="common_not_found">s’u gjet</string>
 </resources>
