--- a/owncloudApp/src/main/res/values-th-rTH/strings.xml
+++ b/owncloudApp/src/main/res/values-th-rTH/strings.xml
@@ -78,6 +78,7 @@
   <string name="illegal_argument_exception_message">ต้องใช้การกระทำที่ถูกต้องเพื่อ</string>
   <string name="recommend_subject">ลองใช้ %1$s บนสมาร์ทโฟนของคุณ!</string>
   <string name="recommend_text">ฉันอยากจะขอเชิญให้คุณใช้ %1$s บนสมาร์ทโฟนของคุณ!\nดาวน์โหลดที่นี่: %2$s</string>
+  <string name="error_reason">เพราะว่า</string>
   <string name="auth_failure_snackbar">การรับรองความถูกต้องล้มเหลว</string>
   <string name="auth_failure_snackbar_action">เปลี่ยนบัญชี</string>
   <string name="auth_oauth_failure">โทเค็นการเข้าถึงหมดอายุหรือไม่ถูกต้อง กรุณาลงชื่อเข้าใช้อีกครั้ง</string>
@@ -138,6 +139,7 @@
   <string name="common_error">ข้อผิดพลาด</string>
   <string name="common_loading">กำลังโหลด...</string>
   <string name="common_unknown">ไม่รู้จัก</string>
+  <string name="common_error_unknown">เกิดข้อผิดพลาดที่ไม่รู้จัก</string>
   <string name="common_pending">อยู่ระหว่างดำเนินการ</string>
   <string name="common_important">สำคัญ</string>
   <string name="about_title">เกี่ยวกับเรา</string>
@@ -286,6 +288,8 @@
   <string name="confirmation_remove_local">เฉพาะในเครื่องเท่านั้น</string>
   <string name="confirmation_remove_account_alert">คุณต้องการลบบัญชี %1$s?</string>
   <string name="confirmation_remove_public_share_title">ลบลิงก์</string>
+  <string name="confirmation_remove_private_share_title">ลบการแชร์แบบส่วนตัว</string>
+  <string name="confirmation_remove_share_message">คุณต้องการลบแชร์ %1$s?</string>
   <string name="remove_success_msg">ลบเรียบร้อยแล้ว</string>
   <string name="remove_fail_msg">ไม่สามารถลบได้</string>
   <string name="rename_dialog_title">กรอกชื่อใหม่</string>
@@ -356,7 +360,13 @@
   <string name="preview_image_error_unknown_format">ไม่สามารถแสดงรูปภาพนี้ได้</string>
   <string name="error__upload__local_file_not_copied">%1$s ไม่สามารถคัดลอกไปยังโฟลเดอร์ %2$s ในเครื่อง</string>
   <string name="prefs_camera_picture_upload_path_title">เส้นทางการอัปโหลดรูปภาพ</string>
+  <string name="get_shares_error">ไม่สามารถดึงการแชร์จากเซิร์ฟเวอร์</string>
+  <string name="get_sharees_error">ไม่สามารถเรียกข้อมูลผู้ใช้และกลุ่มจากเซิร์ฟเวอร์</string>
+  <string name="get_capabilities_error">ไม่สามารถดึงประสิทธิภาพจากเซิร์ฟเวอร์ได้</string>
   <string name="share_link_no_support_share_api">ขออภัยการแชร์ไม่ได้เปิดใช้งานบนเซิร์ฟเวอร์ของคุณ กรุณาติดต่อผู้ดูแลระบบ</string>
+  <string name="share_link_file_error">ไม่สามารถแชร์ไฟล์หรือโฟลเดอร์นี้ได้</string>
+  <string name="unshare_link_file_error">ไม่สามารถยกเลิกการแชร์ไฟล์หรือโฟลเดอร์นี้ได้</string>
+  <string name="update_link_file_error">ไม่สามารถอัปเดตไฟล์หรือโฟลเดอร์นี้ได้</string>
   <string name="share_link_password_title">ป้อนรหัสผ่าน</string>
   <string name="share_link_empty_password">คุณจะต้องใส่รหัสผ่าน</string>
   <string name="activity_chooser_send_file_title">ส่ง</string>
@@ -366,6 +376,7 @@
   <string name="clipboard_uxexpected_error">เกิดข้อผิดพลาดขณะกำลังคัดลอกไปยังคลิปบอร์ด</string>
   <string name="clipboard_label">คัดลอกข้อความจาก %1$s แล้ว</string>
   <string name="error_cant_bind_to_operations_service">ข้อผิดพลาด: ไม่สามารถดำเนินการได้</string>
+  <string name="network_error_socket_exception">เกิดข้อผิดพลาดขณะเชื่อมต่อกับเซิร์ฟเวอร์</string>
   <string name="network_error_socket_timeout_exception">เซิร์ฟเวอร์ดังกล่าวใช้เวลาตอบสนองนานเกินไป</string>
   <string name="network_error_connect_timeout_exception">เซิร์ฟเวอร์ใช้เวลาเชื่อมต่อนานมาก</string>
   <string name="network_host_not_available">ไม่สามารถเข้าถึงเซิร์ฟเวอร์</string>
@@ -544,5 +555,10 @@
   <string name="welcome_feature_9_text">เข้าถึงและแก้ไขไฟล์ ownCloud ของคุณจากแอปอื่น</string>
   <string name="welcome_feature_10_title">log พร้อมค้นหาทุกคน</string>
   <string name="welcome_feature_10_text">ส่ง log ของคุณมาให้เราเพื่อให้แอปทำงานได้ดีขึ้น</string>
+  <string name="welcome_feature_11_title">สิ้นสุดการสนับสนุนสำหรับเซิร์ฟเวอร์ที่มีรุ่นต่ำกว่า 10</string>
+  <string name="welcome_feature_11_text">โปรดอัปเกรดเซิร์ฟเวอร์ของคุณมิฉะนั้นแอปเวอร์ชั่นใหม่จะไม่สามารถใช้งานได้</string>
+  <string name="welcome_feature_12_title">สิ้นสุดการสนับสนุนสำหรับ Android รุ่น 4.4</string>
+  <string name="welcome_feature_12_text">สำหรับอุปกรณ์ที่มีรุ่น Android ต่ำกว่า 5 จะไม่สามารถโหลดแอปบน Play Store</string>
   <string name="no_borwser_installed_alert">โปรดติดตั้งเบราเซอร์ก่อนเพื่อให้สามารถล็อกอินได้อย่างปลอดภัย</string>
+  <string name="common_not_found">ไม่พบข้อมูลใดๆ</string>
 </resources>
