--- a/owncloudApp/src/main/res/values-pt-rBR/strings.xml
+++ b/owncloudApp/src/main/res/values-pt-rBR/strings.xml
@@ -78,6 +78,7 @@
   <string name="illegal_argument_exception_message">Uma AÇÃO válida é necessária no intento passado para</string>
   <string name="recommend_subject">Tentar %1$s em seu smartfone!</string>
   <string name="recommend_text">Gostaria de convida-lo a usar %1$s em seu smartphone!\nBaixe aqui: %2$s</string>
+  <string name="error_reason">porque</string>
   <string name="auth_failure_snackbar">Falha na autenticação</string>
   <string name="auth_failure_snackbar_action">Mudar de conta</string>
   <string name="auth_oauth_failure">O token de acesso expirou ou se tornou inválido. Faça login novamente para recuperar o acesso</string>
@@ -138,6 +139,7 @@
   <string name="common_error">Erro</string>
   <string name="common_loading">Carregando...</string>
   <string name="common_unknown">desconhecido</string>
+  <string name="common_error_unknown">erro desconhecido</string>
   <string name="common_pending">Pendente</string>
   <string name="common_important">Importante</string>
   <string name="about_title">Sobre</string>
@@ -287,6 +289,7 @@
   <string name="confirmation_remove_local">Somente local</string>
   <string name="confirmation_remove_account_alert">Você realmente deseja remover a conta %1$s?</string>
   <string name="confirmation_remove_public_share_title">Remover link</string>
+  <string name="confirmation_remove_share_message">Você realmente deseja remover este  %1$s compartilhamento?</string>
   <string name="remove_success_msg">Removido com sucesso</string>
   <string name="remove_fail_msg">Erro ao remover</string>
   <string name="rename_dialog_title">Digite um novo nome</string>
@@ -357,8 +360,14 @@
   <string name="preview_image_error_unknown_format">Esta imagem não pode ser mostrada</string>
   <string name="error__upload__local_file_not_copied">%1$s não pôde ser copiado para pasta local %2$s</string>
   <string name="prefs_camera_picture_upload_path_title">Caminho para fotos enviadas</string>
+  <string name="get_shares_error">Não foi possível recuperar os compartilhamentos do servidor</string>
+  <string name="get_sharees_error">Não foi possível recuperar os usuários e grupos do servidor</string>
+  <string name="get_capabilities_error">Não foi possível recuperar os recursos do servidor</string>
   <string name="share_link_no_support_share_api">Desculpe, o compartilhamento não está habilitado em seu servidor. Entre em contato com seu 
 ⇥⇥ administrador.</string>
+  <string name="share_link_file_error">Não foi possível compartilhar esse arquivo ou pasta</string>
+  <string name="unshare_link_file_error">Não foi possível desfazer o compartilhamento desse arquivo ou pasta</string>
+  <string name="update_link_file_error">Não foi possível atualizar esse arquivo ou pasta</string>
   <string name="share_link_password_title">Digite uma senha</string>
   <string name="share_link_empty_password">Você deve digitar uma senha</string>
   <string name="activity_chooser_send_file_title">Enviar</string>
@@ -368,6 +377,7 @@
   <string name="clipboard_uxexpected_error">Erro inesperado ao copiar para a área de transferência</string>
   <string name="clipboard_label">Texto copiado de %1$s</string>
   <string name="error_cant_bind_to_operations_service">Erro crítico: não pode executar operações</string>
+  <string name="network_error_socket_exception">erro enquanto conectava com o servidor</string>
   <string name="network_error_socket_timeout_exception">O servidor demorou demais a responder</string>
   <string name="network_error_connect_timeout_exception">O servidor demorou muito para se conectar</string>
   <string name="network_host_not_available">Servidor não pôde ser alcançado</string>
@@ -547,5 +557,10 @@
   <string name="welcome_feature_9_text">Acesse e edite seus arquivos ownCloud de outros aplicativos</string>
   <string name="welcome_feature_10_title">Logs com pesquisa para todos</string>
   <string name="welcome_feature_10_text">Envie-nos seus registros para que o aplicativo funcione melhor</string>
+  <string name="welcome_feature_11_title">Fim do suporte para servidores inferiores a 10</string>
+  <string name="welcome_feature_11_text">Atualize seu servidor ou as próximas versões de aplicativos não funcionarão para você</string>
+  <string name="welcome_feature_12_title">Fim do suporte para dispositivos Android 4.4</string>
+  <string name="welcome_feature_12_text">As próximas versões de aplicativos não aparecerão no Google Play para dispositivos inferiores ao Android 5</string>
   <string name="no_borwser_installed_alert">Nenhum navegador instalado. Por favor, instale um navegador para permitir um login seguro.</string>
+  <string name="common_not_found">não foi encontrado</string>
 </resources>
