--- a/owncloudApp/src/main/res/values-pt-rBR/strings.xml
+++ b/owncloudApp/src/main/res/values-pt-rBR/strings.xml
@@ -289,6 +289,7 @@
   <string name="confirmation_remove_local">Somente local</string>
   <string name="confirmation_remove_account_alert">Você realmente deseja remover a conta %1$s?</string>
   <string name="confirmation_remove_public_share_title">Remover link</string>
+  <string name="confirmation_remove_private_share_title">Remover compartilhamento privado</string>
   <string name="confirmation_remove_share_message">Você realmente deseja remover este  %1$s compartilhamento?</string>
   <string name="remove_success_msg">Removido com sucesso</string>
   <string name="remove_fail_msg">Erro ao remover</string>
