--- a/owncloudApp/src/main/res/values-ca/strings.xml
+++ b/owncloudApp/src/main/res/values-ca/strings.xml
@@ -1,5 +1,8 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
+  <string name="about_android">1%1$s Per Android</string>
+  <string name="about_version">Versió 1%1$s</string>
+  <string name="actionbar_search">Buscar en aquesta carpeta</string>
   <string name="actionbar_sync">Actualitza compte</string>
   <string name="actionbar_upload">Puja un fitxer</string>
   <string name="actionbar_upload_from_apps">Contingut d\'altres aplicacions</string>
@@ -36,6 +39,8 @@
   <string name="prefs_passcode">Contrasenya</string>
   <string name="prefs_fingerprint">Bloqueig per petjada dactilar</string>
   <string name="prefs_fingerprint_summary">Activa la contrasenya o el patró de desbloqueig per activar aquesta opció</string>
+  <string name="confirmation_touches_with_other_windows_title">Segur que voleu habilitar aquesta funció?</string>
+  <string name="confirmation_touches_with_other_windows_message">Utilitzeu aquesta característica sota la vostra responsabilitat, aplicacions malicioses podrien executar accions sense que us adonesiu fent servir altres vistes.</string>
   <string name="prefs_camera_picture_upload">Imatges pujades</string>
   <string name="prefs_camera_picture_upload_summary">Carrega automàticament les fotografies fetes amb la càmera</string>
   <string name="prefs_camera_video_upload">Pujades de vídeos</string>
@@ -46,6 +51,8 @@
   <string name="prefs_log_summary_history">Això mostra els registres desats</string>
   <string name="prefs_log_delete_history_button">Esborra l\'historial</string>
   <string name="prefs_help">Ajuda</string>
+  <string name="prefs_sync_calendar_contacts">Sincronitzeu els vostres contactes, calendaris i tasques</string>
+  <string name="prefs_sync_calendar_contacts_summary">Instal·leu DAVx⁵</string>
   <string name="prefs_recommend">Recomana a un amic</string>
   <string name="prefs_feedback">Comentaris</string>
   <string name="prefs_imprint">Imprint</string>
@@ -64,11 +71,15 @@
   <string name="passcode_already_set">El patró i la contrasenya no poden ser activats al mateix moment. Desactiva la contrasenya si us plau.</string>
   <string name="pattern_no_longer_required">No demanar mai més el patró</string>
   <string name="pattern_configure_your_pattern_explanation">El patró es demanarà cada cop que s\'engegui l\'app</string>
+  <string name="pass_code_locked">Bloquejat amb codi</string>
+  <string name="pattern_locked">Bloquejat amb patró</string>
   <string name="illegal_argument_exception_message">Una ACCIÓ vàlida es requereix per passar a</string>
   <string name="recommend_subject">Proveu %1$s a un telèfon avançat!</string>
   <string name="recommend_text">Vull invitar-te a utilitzar %1$s al teu smartphone!\nDescarrega-ho aqui: %2$s</string>
+  <string name="error_reason">ja que</string>
   <string name="auth_failure_snackbar">Autentificació denegada</string>
   <string name="auth_failure_snackbar_action">Canvia de compte</string>
+  <string name="auth_oauth_failure">El token d\'accés ha caducat o no és vàlid. Inicieu la sessió de nou per recuperar l’accés</string>
   <string name="auth_oauth_failure_snackbar_action">Inicia la sessió</string>
   <string name="auth_check_server">Comprova el funcionament del servidor</string>
   <string name="auth_host_url">Adreça del servidor https://…</string>
@@ -92,10 +103,13 @@
   <string name="uploader_error_message_source_file_not_copied">S\'ha produït un error mentre es copiava el fitxer a una carpeta temporal. Sisplau intenta enviar-ho una altra vegada.</string>
   <string name="file_list_seconds_ago">segons enrere</string>
   <string name="file_list_empty">Res per aquí. Pugeu alguna cosa!</string>
+  <string name="file_list_empty_available_offline">No hi ha arxius sense conexió disponible</string>
+  <string name="file_list_empty_shared_by_links">No s\'han compartit arxius per link</string>
   <string name="file_list_loading">Carregant...</string>
   <string name="file_list_no_app_for_file_type">No s\'ha trobat cap aplicació per a aquest tipus d\'arxiu!</string>
   <string name="local_file_list_empty">No hi ha arxius a aquesta carpeta</string>
   <string name="local_file_list_empty_just_folders">No hi ha cap carpeta en aquesta carpeta.</string>
+  <string name="local_file_list_search_with_no_matches">No hi ha coincidències per aquesta búsqueda</string>
   <string name="upload_list_empty">No hi ha fitxers carregats disponibles.</string>
   <string name="file_list_folder">carpeta</string>
   <string name="file_list_folders">carpetes</string>
@@ -123,13 +137,16 @@
   <string name="common_error">Error</string>
   <string name="common_loading">Carregant...</string>
   <string name="common_unknown">desconegut</string>
+  <string name="common_error_unknown">error desconegut</string>
   <string name="common_pending">Pendent</string>
   <string name="common_important">Important</string>
   <string name="about_title">Quant a</string>
   <string name="change_password">Canvia la contrasenya</string>
   <string name="delete_account">Elimina el compte</string>
   <string name="create_account">Crea un compte</string>
+  <string name="upload_chooser_title">pujat desde</string>
   <string name="uploader_info_dirname">Nom de la carpeta</string>
+  <string name="uploader_upload_in_progress_ticker">Pujant</string>
   <string name="uploader_upload_in_progress_content">%1$d%% Pujant %2$s</string>
   <string name="uploader_upload_succeeded_ticker">La pujada ha estat correcte</string>
   <string name="uploader_upload_succeeded_content_single">%1$s s\'ha carregat correctament</string>
@@ -141,11 +158,16 @@
   <string name="uploader_upload_text_dialog_filename_error_empty">EL nom no es pot deixar en blanc</string>
   <string name="uploader_upload_text_dialog_filename_error_length_max">El nom no pot ser més llarg de %d caràcters</string>
   <string name="uploader_upload_text_filename_hint">Nom del fitxer</string>
+  <string name="uploader_upload_camera_upload_files">Pujant arxius pujats desde càmera</string>
+  <string name="uploader_upload_available_offline_files">Pujant arxius disponibles offline</string>
+  <string name="uploader_upload_requested_from_wifi_files">Pujant arxius solicitats desde arxius wifi</string>
   <string name="ssl_certificate_not_trusted">El certificat del servidor no és de confiança</string>
   <string name="uploads_view_title">Fitxers carregats</string>
   <string name="uploads_view_group_current_uploads">Actual</string>
   <string name="uploads_view_group_failed_uploads">Error (toca per tornar a intentar)</string>
   <string name="uploads_view_group_finished_uploads">Carregat</string>
+  <string name="uploads_view_group_file_count">1%d arxius</string>
+  <string name="uploads_view_group_file_count_single">1%d arxiu</string>
   <string name="uploads_view_upload_status_succeeded">Completat</string>
   <string name="uploads_view_upload_status_cancelled">S\'ha cancel·lat</string>
   <string name="uploads_view_upload_status_paused">Pausat</string>
@@ -163,6 +185,7 @@
   <string name="uploads_view_upload_status_waiting_for_wifi">Esperant connectivitat wifi</string>
   <string name="uploads_view_later_waiting_to_upload">S\'està esperant per pujar-ho</string>
   <string name="uploads_view_unsupported_media_type">Arxiu media no suportat</string>
+  <string name="downloader_download_in_progress_ticker">Descarregant</string>
   <string name="downloader_download_in_progress_content">%1$d%% pujant %2$s</string>
   <string name="downloader_download_succeeded_ticker">La baixada ha estat correcte</string>
   <string name="downloader_download_succeeded_content">%1$s descarregat</string>
@@ -227,6 +250,7 @@
   <string name="media_forward_description">Botó de reproducció ràpida</string>
   <string name="upload_from_camera_title">Fotografia de la càmera</string>
   <string name="auth_getting_authorization">S\'està autenticant...</string>
+  <string name="auth_trying_to_login">Intentant logejar-se a...</string>
   <string name="auth_no_net_conn_title">Sense connexió de xarxa</string>
   <string name="auth_nossl_plain_ok_title">La connexió segura no està disponible.</string>
   <string name="auth_connection_established">S\'ha establert la connexió</string>
@@ -262,6 +286,8 @@
   <string name="confirmation_remove_local">Només local</string>
   <string name="confirmation_remove_account_alert">Segur que vols borrar el compte %1$s?</string>
   <string name="confirmation_remove_public_share_title">Borrar l\'enllaç</string>
+  <string name="confirmation_remove_private_share_title">Eliminar compartició privada</string>
+  <string name="confirmation_remove_share_message">Realment vols eliminar 1%1$s compartició?</string>
   <string name="remove_success_msg">L\'eliminació ha tingut èxit</string>
   <string name="remove_fail_msg">No s\'ha pogut completar l\'eliminació</string>
   <string name="rename_dialog_title">Introdueix un nom nou</string>
@@ -278,6 +304,7 @@
   <string name="wait_checking_credentials">Comprovant les credencials emmagatzemades</string>
   <string name="filedisplay_unexpected_bad_get_content">S\'ha produït un problema inesperat; proveu una altra aplicació per seleccionar el fitxer</string>
   <string name="filedisplay_no_file_selected">No heu seleccionat cap fitxer</string>
+  <string name="activity_chooser_title">Enviar link a</string>
   <string name="wait_for_tmp_copy_from_private_storage">Copiant fitxer des de emmagatzemament privat</string>
   <string name="oauth_check_onoff">Accés amb oAuth2</string>
   <string name="oauth_login_connection">Connectant al servidor OAuth2...</string>
@@ -319,7 +346,10 @@
   <string name="confirmation_disable_camera_uploads_title">Confirma</string>
   <string name="confirmation_disable_pictures_upload_message">Estàs segur que vols desactivar aquesta funció? Les fotos pendents no es carregaran.</string>
   <string name="confirmation_disable_videos_upload_message">Estàs segur que vols desactivar aquesta funció? Les fotos pendents no es carregaran.</string>
+  <string name="proper_pics_folder_warning_camera_upload">Si us plau assegura\'t de que la carpeta que has seleccionat és on la càmara que estàs fent servir guarda les fotografies fetes. En cas contrari l\'aplicació no podrà detectar les vostres imatges. Tingueu en compte que les imatges es penjarant al menys 15 minuts després de fer-les.</string>
+  <string name="proper_videos_folder_warning_camera_upload">Si us plau assegura\'t de que la carpeta que has seleccionat és on la càmara que estàs fent servir guarda els videos fets. En cas contrari l\'aplicació no podrà detectar els vostres videos. Tingueu en compte que els videos es penjarant al menys 15 minuts després de fer-los.</string>
   <string name="conflict_title">Conflicte de fitxers</string>
+  <string name="conflict_description">Hi ha un conflicte en l\'arxiu 1%1$s, clicka per arreglar-ho</string>
   <string name="conflict_message">Quins fitxers vols mantenir? Si seleccioneu les dues versions, el fitxer local tindrà un número afegit al seu nom.</string>
   <string name="conflict_keep_both">Mantén-los ambdós</string>
   <string name="conflict_use_local_version">Versió local</string>
@@ -328,7 +358,13 @@
   <string name="preview_image_error_unknown_format">Aquesta imatge no es pot mostrar</string>
   <string name="error__upload__local_file_not_copied">%1$s no s\'ha pogut copiar a la carpeta local %2$s</string>
   <string name="prefs_camera_picture_upload_path_title">Ruta de pujada de les fotos</string>
+  <string name="get_shares_error">No s\'ha pogut recuperar els compartits del servidor</string>
+  <string name="get_sharees_error">No s\'ha pogut recuperar usuaris ni grups desde el servidor</string>
+  <string name="get_capabilities_error">No s\'ha pogut recuperar compatibilitats del servidor</string>
   <string name="share_link_no_support_share_api">La compartició no es troba disponible al vostre servidor. Contacteu amb l\'administrador.</string>
+  <string name="share_link_file_error">No s\'ha pogut compartir aquest arxiu o carpeta</string>
+  <string name="unshare_link_file_error">No s\'ha pogut deixar de compartir aquest arxiu o carpeta</string>
+  <string name="update_link_file_error">No s\'ha pogut actualitzar aquest arxiu o carpeta</string>
   <string name="share_link_password_title">Escriviu una contrasenya</string>
   <string name="share_link_empty_password">Heu d\'escriure una contrasenya</string>
   <string name="activity_chooser_send_file_title">Envia</string>
@@ -338,6 +374,7 @@
   <string name="clipboard_uxexpected_error">Error inesperat quan es copiava al porta-retalls</string>
   <string name="clipboard_label">Text copiat des de %1$s</string>
   <string name="error_cant_bind_to_operations_service">Error crític: no es poden realitzar operacions</string>
+  <string name="network_error_socket_exception">un error durant la conexió amb el servidor</string>
   <string name="network_error_socket_timeout_exception">El servidor ha trigat massa en respondre</string>
   <string name="network_error_connect_timeout_exception">El servidor tarda massa en connectar</string>
   <string name="network_host_not_available">No es troba el servidor.</string>
@@ -361,6 +398,7 @@
   <string name="log_send_mail_subject">%1$s app de registres Android</string>
   <string name="log_progress_dialog_text">Carregant dades...</string>
   <string name="actionbar_select_all">Seleccionar tot</string>
+  <string name="actionbar_select_inverse">seleccioneu la inversa</string>
   <string name="actionbar_move">Moure</string>
   <string name="file_list_empty_moving">Res per aquí. Pots afegir una carpeta!</string>
   <string name="folder_picker_choose_button_text">Escull</string>
@@ -396,6 +434,8 @@
   <string name="prefs_camera_upload_source_path_title">Carpeta de la Càmera(%1$s)</string>
   <string name="prefs_camera_upload_source_path_title_required">requerit</string>
   <string name="prefs_camera_upload_source_path_title_optional">opcional</string>
+  <string name="prefs_camera_upload_behaviour_dialogTitle">L\'arxiu original serà</string>
+  <string name="prefs_camera_upload_behaviour_title">L\'arxiu original serà</string>
   <string name="upload_copy_files">Copiar fitxer</string>
   <string name="upload_move_files">Moure fitxer</string>
   <string name="pref_behaviour_entries_keep_file">conserva\'t en la carpeta original</string>
@@ -470,6 +510,7 @@
   <string name="share_via_link_expiration_date_enforced_label">Caduca *</string>
   <string name="share_via_link_expiration_date_explanation_label">Els enllaços públics caducaran abans de %1$d dies de la seva creació</string>
   <string name="share_via_link_default_name_template">enllaç %1$s</string>
+  <string name="share_via_link_empty_password">La contrassenya és buida</string>
   <string name="private_link_info">Enllaç privat, només les persones que tenen accés al fitxer/carpeta el podran utilitzar. </string>
   <string name="file_private_link_error">Enllaç privat no disponible per aquest fitxer</string>
   <string name="download_notification_channel_name">Descàrregues</string>
@@ -480,6 +521,7 @@
   <string name="media_service_notification_channel_description">Veure el reproductor de música</string>
   <string name="file_sync_notification_channel_name">Sincronitza fitxers</string>
   <string name="file_sync_notification_channel_description">Veure el resultat de la sincronització</string>
+  <string name="clicks_to_be_developer">Esteu a 1%1$d clicks d\'activar el menu de desenvolupador</string>
   <string name="rate_dialog_title">Valora %1$s l\'aplicació</string>
   <string name="rate_dialog_description">Si us agrada fer servir aquesta aplicació, podríeu invertir un moment en valorar-la? Els vostres comentaris són molt importants per nosaltres.</string>
   <string name="button_no_thanks_name">NO, GRÀCIES</string>
@@ -501,7 +543,12 @@
   <string name="welcome_feature_4_text">Fotos i Vídeos carregats automàticament</string>
   <string name="welcome_feature_5_title">Transmissió de vídeo</string>
   <string name="welcome_feature_5_text">Reprodueix els vídeos sense descarregar-los</string>
+  <string name="welcome_feature_6_title">Buscar en la carpeta actual</string>
+  <string name="welcome_feature_6_text">Filtra arxius per nom</string>
   <string name="welcome_feature_7_title">Seleccionar tot</string>
+  <string name="welcome_feature_7_text">Selecciona tots els arxius de cop</string>
   <string name="welcome_feature_8_title">Disponible fora de línia</string>
+  <string name="welcome_feature_8_text">Els teus arxius sincronitzats automàticament</string>
+  <string name="welcome_feature_9_title">Proveïdor de document</string>
   <string name="no_borwser_installed_alert">Ningun navegador instal·lat. Si us plau, instal·la un navegador per permetre un inici de sessió segur.</string>
 </resources>
